// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllPlacements 1`] = `
<div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      <p>
        top
      </p>
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      <p>
        bottom
      </p>
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      <p>
        left
      </p>
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      <p>
        right
      </p>
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    <p>
      hover me
    </p>
  </span>
</div>
`;
